# elastic-observability-demo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  Pipfile  README.md  pyproject.toml
config/: main.tfvars
config/ec/: elasticsearch.yml  kibana.yml
config/elasticsearch/: cluster_settings.json
config/elasticsearch/component_template/: .ignore  filebeat-8.15.2.json  frontier-logs-k3s@mappings.json  frontier-logs-k3s@settings.json  frontier-logs@mappings.json  frontier-logs@settings.json  logs-http_logs-settings.json  logs-http_server-settings@custom.json  logs-http_server@settings.json  logs-k3s.json  logs-k3s@custom.json  logs-k3s@mappings.json  logs-k3s@settings.json  logs-nginx.access-settings.json
config/elasticsearch/index_lifecycle/: .ignore  frontier-logs.json  (+3 more)
scripts/: deploy.py  destroy.py  pull_config.py  test.py
scripts/helpers/: destroy_terraform.py  flatten_json.py  format_terraform.py  get_context.py  get_env_value.py  init_terraform.py  preprocess_terraform_resources.py
src/terraform/: .terraform.lock.hcl  cluster_settings.tf.j2  component_template.tf.j2  data_view.tf  deployment.tf  index_lifecycle.tf  index_lifecycle.tf.j2  index_lifecycle_policy.tf.j2  index_template.tf.j2  ingest_pipeline.tf  ingest_pipeline.tf.j2  locals.component_template.tf.j2  locals.index_lifecycle.tf.j2  locals.index_lifecycle_policy.tf.j2  locals.index_template.tf.j2  locals.ingest_pipeline.tf.j2  main.tf  outputs.tf  security_role_mapping.tf.j2  security_user.tf.j2  snapshot_repository.tf.j2  terraform.tf  variables.tf
(+41 files in other folders)
