[project]
name = "elastic-observability-demo"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "elasticsearch>=8.15.1,<9",
    "jinja2>=3.1.4",
    "python-terraform>=0.10.1",
    "pyyaml>=6.0.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.7",
    "yamllint>=1.35.1",
]
